# credghost

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
credghost/: __init__.py  cli.py  config.py
credghost/engine/: __init__.py  correlator.py  inventory.py  scorer.py
credghost/models/: __init__.py  nhi.py
credghost/output/: __init__.py  html_reporter.py  json_reporter.py  terminal.py
credghost/providers/: __init__.py  base.py  demo.py
credghost/providers/aws/: __init__.py  analyzer.py  client.py  credentials.py  iam-policy.json  iam.py  provider.py
docs/: testing.md
docs/providers/: aws.md
tests/: test_aws_iam.py  test_demo.py  test_integration_cloudgoat_style.py  test_scorer.py
tests/fixtures/: mock_aws_responses.json
